@@ -1,7 +1,6 @@
 package s1mple.dlowji.ffms_refactor.configuration;
 
 import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.context.ApplicationContext;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.context.annotation.Lazy;
@@ -12,21 +11,20 @@ import org.springframework.security.config.Customizer;
 import org.springframework.security.config.annotation.method.configuration.EnableGlobalMethodSecurity;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
-import org.springframework.security.config.annotation.web.configurers.CorsConfigurer;
 import org.springframework.security.core.userdetails.UserDetailsService;
 import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.security.web.SecurityFilterChain;
 import org.springframework.security.web.authentication.www.BasicAuthenticationFilter;
 import org.springframework.web.cors.CorsConfiguration;
-import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
+import org.springframework.web.filter.CorsFilter;
 import s1mple.dlowji.ffms_refactor.exceptions.CustomAccessDeniedException;
 import s1mple.dlowji.ffms_refactor.exceptions.CustomAuthenEntryPointException;
 import s1mple.dlowji.ffms_refactor.filters.JwtFilter;
 
-import java.util.Arrays;
-import java.util.List;
+import java.time.DayOfWeek;
+import java.util.*;
 
 @Configuration
 @EnableWebSecurity
@@ -45,9 +43,9 @@ public class AuthorizationServerConfiguration {
 	public SecurityFilterChain authServerSecurityFilterChain(HttpSecurity http) throws Exception {
 		http.csrf().disable();
 		http.cors(Customizer.withDefaults());
-		http.httpBasic(Customizer.withDefaults());
 		http.authorizeRequests((auth) -> {
 			auth.antMatchers("/auth/**").permitAll();
+			auth.antMatchers(("/api/football_fields")).permitAll();
 			auth.anyRequest().authenticated();
 		});
 		http.addFilterAt(jwtFilter, BasicAuthenticationFilter.class);
@@ -59,14 +57,17 @@ public class AuthorizationServerConfiguration {
 		return http.build();
 	}
 	@Bean
-	public CorsConfigurationSource corsConfiguration() {
-		CorsConfiguration corsConfig = new CorsConfiguration();
-		corsConfig.setAllowedOrigins(List.of("*"));
-		corsConfig.setAllowCredentials(true);
-		corsConfig.setAllowedHeaders(List.of("Authorization", "Cache-Control", "Content-Type"));
-		UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-		source.registerCorsConfiguration("/**", corsConfig);
-		return source;
+	public CorsFilter corsFilter() {
+		final UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
+		final CorsConfiguration config = new CorsConfiguration();
+		config.setAllowedOriginPatterns(List.of("*"));
+		// Don't do this in production, use a proper list  of allowed origins
+		config.setAllowedOrigins(Collections.singletonList("*"));
+		config.setAllowedHeaders(Arrays.asList("Authorization", "Content-Type"));
+		config.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "OPTIONS", "DELETE", "PATCH"));
+		source.registerCorsConfiguration("/**", config);
+
+		return new CorsFilter(source);
 	}
 
 	@Bean
